[package]
name = "audio-preview"
version = "0.2.1"
edition = "2021"
description = "TUI for quickly navigating the file system and previewing audio files"
repository = "https://github.com/IRSMsoso/audio-preview"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "listen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
ratatui = "0.28.0"
rodio = {git = "https://github.com/IRSMsoso/rodio"}
anyhow = "1.0.86"
showfile = "0.1.1"
