[package]
name = "audio-preview"
version = "0.4.0"
edition = "2021"
description = "TUI for quickly navigating the file system and previewing audio files"
repository = "https://github.com/IRSMsoso/audio-preview"
readme = "README.md"
license = "Apache-2.0"
publish = true

[[bin]]
name = "listen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
rodio = "0.21"
anyhow = "1.0"
showfile = "0.1"